# phys2bids

./: .all-contributorsrc  .autorc  .cirrus.yml  .codecov.yml  .codespellrc  .coveragerc  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .requires.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  Code_of_Conduct.md  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  codecov.yml  dev_requirements.txt  heur.py  heur.sh  issue_36.md  physiobids  physiobids.py  physiobids.sh  pshysiobids.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.azure-pipelines/: windows.yml
.ci/: w_dockerfile  w_miniconda  w_python_36  w_python_37  w_python_38  w_python_39
.circleci/: artifact_path  config.yml
.github/: ISSUE_TEMPLATE.md  ISSUE_TEMPLATE_BUGS.md  ISSUE_TEMPLATE_FEATURE_REQUEST.md  ISSUE_TEMPLATE_GENERAL.md  PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE_BUGS.md  ISSUE_TEMPLATE_DISCUSSION.md  ISSUE_TEMPLATE_FEATURE_REQUEST.md  ISSUE_TEMPLATE_GENERAL.md  ISSUE_TEMPLATE_MEETING.md  custom.md
.github/workflows/: auto-author-assign.yml  auto-label.yml  auto-release.yml  main-reviewer.yml  main_rev_checklist.md  python-publish.yml  pythonpublish.yml
docs/: Makefile  api.rst  bestpractice.rst  bids.rst  cli.rst  conduct.rst  conf.py  contributing.rst  contributorfile.rst  heuristic.rst  howto.rst  index.rst  installation.rst  license.rst
phys2bids/: __init__.py  _version.py  bids.py  bids_units.py  conversion.py  due.py  io.py  phys2bids.py  physio_obj.py  physiobids.py  slice4phys.py  split2phys.py  split4phys.py  synchronization.py  test_slice4phys.py  utils.py  viz.py
phys2bids/cli/: __init__.py  run.py  split.py
phys2bids/heuristics/: heur.py  heur_euskalibur.py  heur_ex.py  heur_test_acq.py  heur_test_multifreq.py  heur_tutorial.py  participant.yml
phys2bids/interfaces/: __init__.py  acq.py  io.py  mat.py  txt.py
phys2bids/reporting/: __init__.py  html_report.py  report_log_template.html  report_plots_template.html  report_template.html
phys2bids/reporting/assets/: main.css
phys2bids/tests/: conftest.py  test_acq.py  test_bids.py  test_bids_units.py  test_integration.py  test_integration_txt.py  test_io.py  test_mat.py  test_phys2bids.py  test_physio_obj.py  test_run.py  test_slice4phys.py  test_txt.py  test_utils.py  test_viz.py
phys2bids/tests/data/: PPGData_epiRT_0509202010_27_51_971  README.md  RESPData_epiRT_0509202010_27_51_971  tutorial_file.json  tutorial_file_INFO.json
