[metadata]
name = phys2bids
url = https://github.com/smoia/phys2bids
download_url = https://github.com/smoia/phys2bids
author = phys2bids developers
maintainer = Stefano Moia
maintainer_email = s.moia@bcbl.eu
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = Apache-2.0
description = Python library to convert physiological data files into BIDS format
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    phys2bids

[options]
python_requires = >=3.6.1
install_requires =
    bioread
    numpy >=1.9.3
    pandas >=0.10
    matplotlib >=3.1.1
tests_require =
    pytest >=3.6
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
style =
    flake8 >=3.7
test =
    pytest-cov
all =
    %(doc)s
    %(style)s
    %(test)s

[options.package_data]
abagen =
    phys2bids/data/*
    phys2bids/heuristics/*
    phys2bids/tests/data/*

[options.entry_points]
console_scripts =
    phys2bids=phys2bids.physiobids:_main

[flake8]
doctest = True
exclude=
    *build/
    tests
ignore = E126, E402, W503
max-line-length = 99
per-file-ignores =
    */__init__.py:F401

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[versioneer]
VCS = git
style = pep440
versionfile_source = phys2bids/_version.py
versionfile_build = phys2bids/_version.py
tag_prefix =
parentdir_prefix =
