[metadata]
name = phys2bids
url = https://github.com/physiopy/phys2bids
download_url = https://github.com/physiopy/phys2bids
author = phys2bids developers
maintainer = Stefano Moia
maintainer_email = s.moia@bcbl.eu
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = Apache-2.0
description = Python library to convert physiological data files into BIDS format
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    phys2bids

[options]
python_requires = >=3.6.1
install_requires =
    numpy >=1.10, <1.24
    matplotlib >=3.1.1, !=3.3.0rc1
    PyYAML >=5.1
tests_require =
    pytest >=5.3
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
spike2 =
    sonpy >=1.7.5;python_version=='3.7.*,3.8.*,3.9.*''
acq =
    bioread >=1.0.5
mat=
    pymatreader >=0.0.24
duecredit =
    duecredit
doc =
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
style =
    flake8 >=4.0
    black
    isort <6.0.0
    pydocstyle
    codespell
interfaces =
    %(acq)s
    %(mat)s
    %(spike2)s
test =
    pytest >=5.3
    pytest-cov
    coverage
    %(interfaces)s
    %(style)s
all =
    %(doc)s
    %(duecredit)s
    %(interfaces)s
    %(style)s
    %(test)s

[options.package_data]
abagen =
    phys2bids/data/*
    phys2bids/heuristics/*
    phys2bids/tests/data/*

[options.entry_points]
console_scripts =
    phys2bids=phys2bids.phys2bids:_main

[flake8]
doctest = True
exclude =
    *build/
    heuristics
    tests
    _version.py
    ./phys2bids/cli/__init__.py
    ./phys2bids/tests/*
    versioneer.py
ignore = E126, E402, W503, E226, F401, F811
max-line-length = 88
extend-ignore = E203, E501
extend-select = B950
per-file-ignores =
    workflow.py:D401

[isort]
profile = black
skip_gitignore = true
extend_skip =
    .autorc
    .coverage*
    .readthedocs.yml
    .zenodo.json
    codecov.yml
    setup.py
    versioneer.py
    phys2bids/_version.py
skip_glob =
    docs/*

[pydocstyle]
convention = numpy
match =
    nigsp/*.py
match_dir = nigsp/[^tests,^heuristics]*

[codespell]
skip = venvs,.venv,versioneer.py,.git,build,./docs/_build
write-changes =
count =
quiet-level = 3

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[versioneer]
VCS = git
style = pep440
versionfile_source = phys2bids/_version.py
versionfile_build = phys2bids/_version.py
tag_prefix =
parentdir_prefix =

[coverage:run]
branch = True
omit =
    phys2bids/tests/*
    docs/*
    setup.py
    versioneer.py
    doi.py
    __init__.py
    */__init__.py
    */*/__init__.py
